--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <!-- github server corresponds to entry in ~/.m2/settings.xml -->
+                <github.global.server>github</github.global.server>
 	</properties>
     <groupId>gr.ntua.image</groupId>
     <artifactId>MediaCheckerDaemon</artifactId>
@@ -36,14 +38,48 @@
 					</descriptorRefs>
 				</configuration>
 			</plugin>
+    			<plugin>
+        			<artifactId>maven-deploy-plugin</artifactId>
+        			<version>2.8.1</version>
+        			<configuration>
+            				<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+        			</configuration>
+    			</plugin>
+        		<plugin>
+            			<groupId>com.github.github</groupId>
+            			<artifactId>site-maven-plugin</artifactId>
+            			<version>0.11</version>
+            			<configuration>
+                			<message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+                			<noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+                			<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+                			<branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+                			<includes><include>**/*</include></includes>
+                			<repositoryName>mediachecker</repositoryName>      <!-- github repo name -->
+                			<repositoryOwner>dantodor</repositoryOwner>    <!-- github username  -->
+            			</configuration>
+            			<executions>
+              				<!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+              				<execution>
+                			<goals>
+                  				<goal>site</goal>
+                			</goals>
+                			<phase>deploy</phase>
+              				</execution>
+            			</executions>
+        		</plugin>
 		</plugins>
 	</build>
 
 	<repositories>
 		<repository>
-			<id>xuggle repo</id>
-			<url>http://xuggle.googlecode.com/svn/trunk/repo/share/java/</url>
-		</repository>
+        		<id>xuggle</id>
+        		<url>https://raw.github.com/dantodor/xuggle/master/repo/share/java</url>
+        		<snapshots>
+            			<enabled>true</enabled>
+            			<updatePolicy>always</updatePolicy>
+        		</snapshots>
+    		</repository>
 	</repositories>
 
 	<dependencies>
@@ -80,11 +116,11 @@
 		</dependency>
 	</dependencies>
 
-	<distributionManagement>
-		<repository>
-			<id>artifactory.eanadev.org</id>
-			<name>artifactory.eanadev.org-releases</name>
-			<url>http://artifactory.eanadev.org/artifactory/ext-snapshot-local</url>
-		</repository>
-	</distributionManagement>
+        <distributionManagement>
+                        <repository>
+                                <id>internal.repo</id>
+                                <name>Temporary Staging Repository</name>
+                                <url>file://${project.build.directory}/mvn-repo</url>
+                        </repository>
+        </distributionManagement>
 </project>
